# parser-template

./: .gitignore  README.md  pyproject.toml
.envs/example/: .webdriver-manager
docker/: .dockerignore  Dockerfile  compose.yml
src/app/: example.py
src/base/bs4/: interface.py
src/base/httpx/: clients.py
src/base/selenium/: drivers.py  expected_conditions.py  interface.py  types.py  waits.py
