[project]
name = "parser-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "fake-useragent>=2.0.3",
    "httpx>=0.28.1",
    "lxml>=5.3.0",
    "selenium>=4.28.0",
    "setuptools>=75.8.0",  # for undetected-chromedriver
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.4",
]

[project.scripts]
example = "app.example:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/base",
    "src/app",
]
